<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="338dp"
            android:layout_height="match_parent"
            android:text="@string/up_name"
            android:textSize="28dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher_round" />

    </LinearLayout>

    <TextView
        android:id="@+id/vvodDannyh"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textSize="22dp" />

    <RelativeLayout
    android:layout_width="300dp"
    android:layout_height="40dp"
    android:layout_marginLeft="60dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="60dp"
    >

    <TextView
        android:id="@+id/FIO"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/fio2"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/FIO"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="16sp" />


</RelativeLayout>

    <RelativeLayout
    android:layout_width="300dp"
    android:layout_height="40dp"
    android:layout_marginLeft="60dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="60dp"
    >

    <TextView
        android:id="@+id/Vozrast"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/age"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/Vozrast2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/Vozrast"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textSize="16sp" />

</RelativeLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="150dp"
        android:text="@string/savebtn"/>

    <Button
        android:id="@+id/next"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="150dp"
        android:text="@string/next"/>



</LinearLayout>